config/pebble-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pebble
  namespace: ${NAMESPACE}
  labels:
    app: pebble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pebble
  template:
    metadata:
      labels:
        app: pebble
    spec:
      containers:
      - name: pebble
        image: ghcr.io/letsencrypt/pebble:${PEBBLE_IMAGE_TAG}
        args:
          - "-config"
          - "/config/pebble-config.json"
        ports:
        - name: http
          containerPort: 5002
          protocol: TCP
        - name: https
          containerPort: 5001
          protocol: TCP
        - name: acme
          containerPort: 14000
          protocol: TCP
        - name: management
          containerPort: 15000
          protocol: TCP
        volumeMounts:
        - name: pebble-config
          mountPath: /config
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: pebble-config
        configMap:
          name: pebble-config
---
apiVersion: v1
kind: Service
metadata:
  name: pebble
  namespace: ${NAMESPACE}
  labels:
    app: pebble
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 5002
    protocol: TCP
  - name: https
    port: 443
    targetPort: 5001
    protocol: TCP
  - name: acme
    port: 14000
    targetPort: 14000
    protocol: TCP
  - name: management
    port: 15000
    targetPort: 15000
    protocol: TCP
    nodePort: 31500
  selector:
    app: pebble
