config/pebble-p2p-forge-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pebble-http
  namespace: ${NAMESPACE}
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pebble.localhost`)
      kind: Rule
      services:
        - name: pebble
          port: 14000
          scheme: https
          serversTransport: pebble-transport
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pebble-https
  namespace: ${NAMESPACE}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pebble.localhost`)
      kind: Rule
      services:
        - name: pebble
          port: 14000
          scheme: https
          serversTransport: pebble-transport
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: p2p-forge
  namespace: ${NAMESPACE}
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`p2p-forge.localhost`)
      kind: Rule
      services:
        - name: p2p-forge
          port: 8080
